@@ -1,0 +1,12 @@
+
+args <- c(0L, 51L, 126L, 8480L, 60929L, 180832L)
+
+resOld <- c("b7fa0888",  "82a699e",   "4754b3",    "b3da3",     "e67c",      "872")
+resNew <- c("b7fa0888", "082a699e", "004754b3", "000b3da3", "0000e67c", "00000872")
+
+options("digestOldCRC32Format" = TRUE)
+stopifnot(sapply(args, digest, algo="crc32") == resOld)
+
+options("digestOldCRC32Format" = FALSE)
+stopifnot(sapply(args, digest, algo="crc32") == resNew)
+
